Update .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-Lightweight.uvguix.Arkady
-Lightweight.uvoptx
+Lightweight/Lightweight.uvguix.Arkady
+Lightweight/Lightweight.uvoptx
+Lightweight/EventRecorderStub.scvd
