Added functions for work with flesh memory in STM32, the code for the goalkeeper is almost finished

--- a/Lightweight/Lightweight.uvprojx
+++ b/Lightweight/Lightweight.uvprojx
@@ -341,7 +341,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F407xx,STM32F40_41xxx, USE_STDPERIPH_DRIVER,  HSE_VALUE = 8000000, USE_HSE</Define>
               <Undefine></Undefine>
-              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord</IncludePath>
+              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -603,6 +603,16 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>flash</GroupName>
+          <Files>
+            <File>
+              <FileName>flash.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\flash\flash.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>Motor</GroupName>
           <Files>
             <File>
@@ -799,6 +809,11 @@
               <FileName>stm32f4xx_crc.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\spl4\src\stm32f4xx_crc.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f4xx_flash.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\spl4\src\stm32f4xx_flash.c</FilePath>
             </File>
             <File>
               <FileName>stm32f4xx_dac.c</FileName>
