--- a/Lightweight/Lightweight.uvprojx
+++ b/Lightweight/Lightweight.uvprojx
@@ -341,7 +341,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F407xx,STM32F40_41xxx, USE_STDPERIPH_DRIVER,  HSE_VALUE = 8000000, USE_HSE</Define>
               <Undefine></Undefine>
-              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash</IncludePath>
+              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash;.\src\Processing_coord;.\src\Goalkeeper;.\src\Forward</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -418,7 +418,37 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Processing_coord</GroupName>
+          <GroupName>Goalkeeper</GroupName>
+          <Files>
+            <File>
+              <FileName>Goalkeeper.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Goalkeeper\Goalkeeper.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Goalkeeper.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Goalkeeper\Goalkeeper.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Forward</GroupName>
+          <Files>
+            <File>
+              <FileName>Forward.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Forward\Forward.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Forward.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Forward\Forward.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>ProcessingCoord</GroupName>
           <Files>
             <File>
               <FileName>Processing_coord.cpp</FileName>
