--- a/Lightweight/Lightweight.uvprojx
+++ b/Lightweight/Lightweight.uvprojx
@@ -339,9 +339,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F407xx,STM32F40_41xxx, USE_STDPERIPH_DRIVER,  HSE_VALUE = 8000000, USE_HSE</Define>
+              <Define>STM32F407xx,STM32F40_41xxx, USE_STDPERIPH_DRIVER,  HSE_VALUE = 12000000, USE_HSE</Define>
               <Undefine></Undefine>
-              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash;.\src\Processing_coord;.\src\Goalkeeper;.\src\Forward;.\src\kicker</IncludePath>
+              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash;.\src\Processing_coord;.\src\Goalkeeper;.\src\Forward;.\src\kicker;.\src\Voltage</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -579,6 +579,21 @@
               <FileName>Vec2b.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Vec2b\Vec2b.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Voltage</GroupName>
+          <Files>
+            <File>
+              <FileName>Voltage.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Voltage\Voltage.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Voltage.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Voltage\Voltage.h</FilePath>
             </File>
           </Files>
         </Group>
