Added ball sensor class

--- a/Lightweight/Lightweight.uvprojx
+++ b/Lightweight/Lightweight.uvprojx
@@ -341,7 +341,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F407xx,STM32F40_41xxx, USE_STDPERIPH_DRIVER,  HSE_VALUE = 8000000, USE_HSE</Define>
               <Undefine></Undefine>
-              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash;.\src\Processing_coord;.\src\Goalkeeper;.\src\Forward;.\src\kicker;.\src\Voltage;.\src\Button</IncludePath>
+              <IncludePath>.\support_pacage;.\support_pacage\arm;.\support_pacage\gcc\linker;.\support_pacage\gcc;.\support_pacage\inc;.\src;.\src\time_service;.\src\usart2;.\src\usart3;.\src\usart1;.\src\adc;.\src\Motor;.\src\Pin;.\src\dma;.\src\IMU_SPI;.\src\main;.\src\external;.\src\SPI_DOT;.\src\SPI_1;.\src\usable;.\src\mpu9250;.\src\global_macros;.\src\omniplatform;.\src\IMU_USART;.\src\spl4;.\src\spl4\inc;.\src\spl4\src;.\src\cmsis;.\src\usart6;.\src\OpenMV;.\src\TSOP;.\src\I2C;.\src\IR_Locator;.\src\Vec2b;.\src\Robot;.\src\Queues_ball;.\src\Processing_coord;.\src\flash;.\src\Processing_coord;.\src\Goalkeeper;.\src\Forward;.\src\kicker;.\src\Voltage;.\src\Button;.\src\BallSensor</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -583,6 +583,21 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>BallSensor</GroupName>
+          <Files>
+            <File>
+              <FileName>BallSensor.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\BallSensor\BallSensor.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>BallSensor.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\BallSensor\BallSensor.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>Voltage</GroupName>
           <Files>
             <File>
@@ -598,17 +613,47 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>IMU_SPI</GroupName>
+          <GroupName>Button</GroupName>
           <Files>
             <File>
-              <FileName>IMU_SPI.cpp</FileName>
+              <FileName>Button.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\IMU_SPI\IMU_SPI.cpp</FilePath>
+              <FilePath>.\src\Button\Button.cpp</FilePath>
             </File>
             <File>
-              <FileName>IMU_SPI.h</FileName>
+              <FileName>Button.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\src\IMU_SPI\IMU_SPI.h</FilePath>
+              <FilePath>.\src\Button\Button.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Pin</GroupName>
+          <Files>
+            <File>
+              <FileName>Pin.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Pin\Pin.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Pin.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Pin\Pin.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>time_service</GroupName>
+          <Files>
+            <File>
+              <FileName>time_service.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\time_service\time_service.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>time_service.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\time_service\time_service.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -633,57 +678,27 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>Button</GroupName>
-          <Files>
-            <File>
-              <FileName>Button.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Button\Button.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Button.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Button\Button.h</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>time_service</GroupName>
-          <Files>
-            <File>
-              <FileName>time_service.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\time_service\time_service.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>time_service.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\time_service\time_service.h</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>Pin</GroupName>
-          <Files>
-            <File>
-              <FileName>Pin.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Pin\Pin.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Pin.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Pin\Pin.h</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
           <GroupName>flash</GroupName>
           <Files>
             <File>
               <FileName>flash.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\flash\flash.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>IMU_SPI</GroupName>
+          <Files>
+            <File>
+              <FileName>IMU_SPI.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\IMU_SPI\IMU_SPI.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>IMU_SPI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\IMU_SPI\IMU_SPI.h</FilePath>
             </File>
           </Files>
         </Group>
